added some more code, personalized, added resume and fleshed out some sections

--- a/index.html
+++ b/index.html
@@ -3,69 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhoomi Kotharkar | Portfolio</title>
+    <title>Tony Luu | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Optional: Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header & Navigation -->
     <header>
         <nav>
-            <div class="logo">Bhoomi Kotharkar</div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <div class="logo">Tony Luu</div>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-
-    <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-content">
-            <h1>Hi, I'm <span>Bhoomi Kotharkar</span></h1>
-            <p>Computer Science Student | UI Designer | Problem Solver</p>
-            <a href="#projects" class="btn">View My Work</a>
-        </div>
+        <h1>Hi, I'm <span>Tony Luu</span></h1>
+        <p>CS Student | AI Engineer | Designer</p>
+        <a href="projects.html" class="btn">View My Work</a>
     </section>
-
-    <!-- About Section -->
-    <section id="about" class="about">
-        <h2>About Me</h2>
-        <p>
-            I'm a Computer Science student at Georgia Tech with a passion for blending technology and design to create impactful solutions. Currently exploring UI/UX design, software engineering, and solving real-world challenges.
-        </p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <h2>Projects</h2>
-        <div class="project-item">
-            <h3>Project 1: Nutrition Tracking App</h3>
-            <p>Designed a holistic nutrition and health tracking app that integrates mental wellness, workout scheduling, and social media influences.</p>
-        </div>
-        <div class="project-item">
-            <h3>Project 2: GPS Traffic Alert UI</h3>
-            <p>Developed a responsive GPS interface to deliver real-time traffic updates with lane-specific accident data.</p>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <h2>Contact</h2>
-        <p>Let’s connect! Feel free to reach out via email or follow me on LinkedIn.</p>
-        <a href="mailto:youremail@example.com" class="btn">Email Me</a>
-        <a href="https://linkedin.com/in/yourlinkedin" target="_blank" class="btn">LinkedIn</a>
-    </section>
-
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Bhoomi Kotharkar. All Rights Reserved.</p>
+        <p>&copy; 2024 Tony Luu. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
